# game_of_life

./: .gitignore  game-of-life.py  pyproject.toml
board/: dead_board.py  random_board.py  test_dead_board.py  test_random_board.py
